<resources>
    <string name="app_name">MineSweeper</string>
    <string name="google_app_id">appId</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="beginner">Beginner</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="levels">Choose Skill Level</string>
    <string name="start">START</string>
    <string name="timer">00:00</string>
    <string name="remainingFlags"> Flags remain</string>
    <string name="paused">Paused</string>
    <string name="options">This action will abort your game, are you sure ? </string>
    <string name="highScoresOption">High Scores</string>
    <string name="returnOption">Return</string>
    <string name="endGame">RESTART</string>
    <string name="mineAdd">  Mines were added and  </string>
    <string name="tileCover">  Tiles were covered! Stop moving your device!</string>
    <string name="yourTime">Your time - </string>
    <string name="playAgain">Play Again?"</string>
    <string name="winGame">"You win ! But it was too slow :( "</string>
    <string name="loseGame">"You've lost the game!"</string>
    <string name="tooMuchMines">"Too many mines in you field, You've lost the game!"</string>
    <string name="score">Score Table</string>
    <string name="winAlert">"YOU WIN ! Your Score is - "</string>
    <string name="noLocation">"Waiting for location...."</string>
    <string name="okButton">OK</string>
    <string name="map_score">Map Score Table</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_name">Enter your name...</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="totalTime">"Your total time - "</string>
    <string name="locationEnable">Location service Enabled</string>
    <string name="movingDeviceToast">Stop moving your device or Mines will be added to the board and revealed tiles will be hidden!</string>
    <string name="locationNotEna">"Location permission denied, Your records won't be save"</string>
    <string name="titleActivityScoreTable">ScoreTableActivity</string>
</resources>
