<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:id="@+id/btnScore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="@string/score" />

        <Button
            android:id="@+id/btnScoreMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/map_score" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="436dp" />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:id="@+id/highScoresLevels">

        <RadioButton android:id="@+id/beginner"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:onClick="onRadioButtonClicked"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView" />
        <RadioButton android:id="@+id/medium"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:onClick="onRadioButtonClicked"
            android:layout_alignBaseline="@+id/beginner"
            android:layout_alignBottom="@+id/beginner"
            android:layout_toEndOf="@+id/beginner" />

        <RadioButton
            android:id="@+id/hard"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:onClick="onRadioButtonClicked"
            android:layout_alignBaseline="@+id/medium"
            android:layout_alignBottom="@+id/medium"
            android:layout_alignEnd="@+id/textView" />

    </RadioGroup>


</LinearLayout>