<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper_3"
    tools:context="com.example.ranendelman.minesweeper.Activities.MainActivity">


    <Button
        android:text="@string/highScoresOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/HighScores"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/imageButton3"
        android:background="@android:color/transparent"
        android:src="@drawable/start4"
        android:layout_marginBottom="76dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="29dp"
        android:id="@+id/textView"
        android:layout_marginBottom="36dp"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginTop="92dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView">

        <RadioButton android:id="@+id/beginner"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:onClick="onRadioButtonClicked"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <RadioButton android:id="@+id/medium"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:onClick="onRadioButtonClicked"
            android:layout_alignBaseline="@+id/beginner"
            android:layout_alignBottom="@+id/beginner"
            android:layout_toEndOf="@+id/beginner" />

        <RadioButton android:id="@+id/hard"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:onClick="onRadioButtonClicked"
            android:layout_alignBaseline="@+id/medium"
            android:layout_alignBottom="@+id/medium"
            android:layout_alignEnd="@+id/textView" />
    </RadioGroup>
</RelativeLayout>
